# k8s_practice

./: .gitignore  500_ERROR_RESOLUTION.md  AWS_FREE_TIER.md  BUDGET_TRACKER_GUIDE.md  CI_CD_BEST_PRACTICES.md  CI_CD_SETUP.md  DEPLOYMENT_SUMMARY.md  FIX_500_ERRORS.md  GRAFANA_NOTE.md  GRAFANA_QUICKSTART.md  GRAFANA_SETUP.md  INFRASTRUCTURE_FIX_SUMMARY.md  K9S_QUICKSTART.md  LOCAL_TESTING.md  README.md  REPOSITORY_IMPROVEMENTS.md  SOLUTION_SUMMARY.md  START_HERE.md  TERRAFORM_DESTROY_FIX.md  TROUBLESHOOTING_500_ERRORS.md  UI_README.md  config-disabled.json  config.json  deploy.sh  pyproject.toml
docker/: Dockerfile.lambda  Dockerfile.lambda.uv  docker-compose.yml
docs/: CICD_UPDATES.md  DEPLOYMENT.md  GRAFANA_INTEGRATION_OPTIONS.md  LAMBDA_REORGANIZATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REORGANIZATION_SUMMARY.md  SYSOP_ROADMAP.md
frontend/: app.html  budget.html  grafana.html  index.html
grafana/: GRAFANA_ACCESS.md  README.md  README_WSL_ACCESS.md  TROUBLESHOOT.md  access-grafana.sh  docker-compose.yml  setup-cloudwatch-datasource.sh  setup-grafana.sh
infrastructure/: budget-tracker.tf  frontend.tf  grafana-managed.tf  grafana.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
kubernetes/: README.md  api-deployment.yaml  api-service.yaml  create-item-deployment.yaml  create-item-service.yaml  delete-item-deployment.yaml  delete-item-service.yaml  get-items-deployment.yaml  get-items-service.yaml  grafana-configmap-dashboards.yaml  grafana-deployment.yaml  grafana-provisioning.yaml  grafana-service.yaml
scripts/: access-grafana.sh  (+29 more)
(+74 files in other folders)
