[project]
name = "serverless-app"
version = "0.1.0"
description = "Personal Knowledge Base - Serverless API"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

